<?xml version="1.0" encoding="utf-8"?>
<!-- Bottom navigation: ids match the destination ids in res/navigation/nav_main.xml. -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home"/>
    <item
        android:id="@+id/nav_tournaments"
        android:icon="@drawable/ic_trophy"
        android:title="@string/nav_tournaments"/>
    <item
        android:id="@+id/nav_matches"
        android:icon="@drawable/ic_matches"
        android:title="@string/nav_matches"/>
    <item
        android:id="@+id/nav_wallet"
        android:icon="@drawable/ic_wallet"
        android:title="@string/nav_wallet"/>
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile"/>
</menu>
