<?xml version="1.0" encoding="utf-8"?>
<!-- Forgot password scaffold: phase 1C wires the reset request. -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/forgot_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:paddingLeft="@dimen/ta_screen_padding_horizontal"
    android:paddingRight="@dimen/ta_screen_padding_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/ta_space_4xl"
        android:paddingBottom="@dimen/ta_screen_padding_bottom">

        <ImageView
            android:layout_width="@dimen/ta_icon_3xl"
            android:layout_height="@dimen/ta_icon_3xl"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/cd_logo"
            android:src="@drawable/ic_illustration_lock"/>

        <TextView
            android:id="@+id/forgot_title"
            style="@style/TextAppearance.TA.Headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ta_space_lg"
            android:gravity="center"
            android:text="@string/auth_forgot_title"/>

        <TextView
            android:id="@+id/forgot_subtitle"
            style="@style/TextAppearance.TA.Body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ta_space_2xs"
            android:gravity="center"
            android:text="@string/auth_forgot_subtitle"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/forgot_email_field"
            style="@style/Widget.TA.InputField"
            android:layout_marginTop="@dimen/ta_space_3xl"
            android:hint="@string/label_email"
            app:startIconDrawable="@drawable/ic_mail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/forgot_email_input"
                style="@style/Widget.TA.InputField.EditText"
                android:hint="@string/hint_email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/forgot_submit_button"
            style="@style/Widget.TA.PrimaryButton"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/ta_space_xl"
            android:text="@string/action_send_reset_code"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/forgot_back_button"
            style="@style/Widget.TA.TextButton"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/ta_space_md"
            android:text="@string/auth_login_link"/>
    </LinearLayout>
</ScrollView>
